--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
     />
+    <!-- waypoint -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
+      integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
     <!-- aos 관련 코드 -->
     <link rel="stylesheet" href="js/aos.css">
     <script src="js/aos.js"></script>
@@ -315,6 +321,28 @@
           </div>
       </section>
         <!-- 하단 -->
+        <footer class="footer" id="footer">
+           <div class="inner">
+            <ul class="footer-list">
+              <li>
+                <span>상호 : ㈜와이드모바일<em class="footer-bar"></em></span>
+  
+                <span
+                  >통신판매업신고번호 : 제2018-서울서대문-0301호<em
+                    class="footer-bar"
+                  ></em
+                ></span>
+  
+                <span>사업자등록번호 : 121-81-66458</span>
+              </li>
+              <li>
+                고객센터 : <a href="tel:000-0000">1566-9070</a> (운영시간
+                9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)
+              </li>
+              <li><p>Copyright © WIDEMOBILE INC. Allright Reserved.</p></li>
+            </ul>
+           </div>
+        </footer>
     </div>
 
 </body>
