--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta property="og:image" content="https://d01.wifidosirak.com/tong/images/common/dosiraktong.png" />
     <meta property="og:url" content="https://www.dosiraktong.com" />
     <link rel="canonical" href="https://www.dosiraktong.com" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- Twitter -->
     <meta name="twitter:title" content="도시락으로 다 통한다, 해외 데이터는 도시락통" />
     <meta name="twitter:description" content="도시락으로 다 통한다, 해외 데이터는 도시락통! 와이파이도시락, 도시락유심, 도시락eSIM을모두 담은 도시락통" />
@@ -62,7 +63,24 @@
 
 <body>
     <!-- 안내창 -->
+    <div class="modal-wrap">
+      <div class="modal-main">
+        <span class="modal-logo"></span>
+        <p class="modal-notice">
+          해당 사이트는 <strong>스터디용</strong>으로 제작되었으며,<br />
+          리소스는 <strong>원저작자</strong>에게 있음을 알려드립니다.<br />
+          문제사항이 있을 시 연락주시면 빠른 시일 내 조치하겠습니다.<br />
+          <span>본 사이트는 Chrome 에 최적화되어 있습니다.</span>
+        </p>
+        <div class="modal-close"><strong>확인했습니다. </strong>
+          <i>( Click 하여 닫기 )</i></div>
+      </div>
+    </div>
     <!-- gotop -->
+    <button class="gotop">
+      <i class="top__icon xi-long-arrow-up"></i>
+    </button>
+    <!-- 레이아웃 -->
     <div class="wrap">
         <!-- 상단 -->
         <header class="header">
