--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
     <!-- 안내창 -->
     <div class="modal-wrap">
       <div class="modal-main">
-          <div class="modal-txt">
-              해당 사이트는 스터디용으로 제작되었으며, 모든 리소스의 저작권은
-              원저작자에게 있습니다. <br />
-              * 본 사이트는 Chrome 에 최적화되어 있습니다. <br />
-              * 해당 사이트와 관련한 문제가 있으면
-              <a href="mailto:aaa@gmail.com">여기</a>연락바랍니다
-          </div>
-          <button class="modal-close">닫기</button>
+        <span class="modal-logo"></span>
+        <p class="modal-notice">
+          해당 사이트는 <strong>스터디용</strong>으로 제작되었으며,<br />
+          리소스는 <strong>원저작자</strong>에게 있음을 알려드립니다.<br />
+          문제사항이 있을 시 연락주시면 빠른 시일 내 조치하겠습니다.<br />
+          <span>본 사이트는 Chrome 에 최적화되어 있습니다.</span>
+        </p>
+        <div class="modal-close"><strong>확인했습니다. </strong>
+          <i>( Click 하여 닫기 )</i></div>
       </div>
-  </div>
+    </div>
     <!-- gotop -->
     <button class="gotop">
       <i class="top__icon xi-long-arrow-up"></i>
