네이버 검색 노출 적용

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- js -->
     <script src="js/script.js"></script>
+    <!-- 네이버 검색노출 -->
+    <meta name="naver-site-verification" content="a340d5dea4841df459dd96a1bf27d1bdfec826e7" />
 </head>
 
 <body>
